<resources>
    <string name="app_name">POPGYM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tituloInicial">POPGYM</string>
    <string name="nav_header_title">POPGYM</string>
    <string name="nav_header_subtitle">jimmynunez.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_exit">Salir</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="guardarEvento">Guardar</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Imagenes</string>
    <string name="menu_slideshow">Otro</string>
    <string name="menu_evento">Evento</string>
    <string name="menu_database">Base De Datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>