<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="jimmynunez.com.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="jimmynunez.com.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="jimmynunez.com.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_evento"
        android:name="jimmynunez.com.ui.evento.EventoFragment"
        android:label="@string/menu_evento"
        tools:layout="@layout/fragment_evento" />
    <fragment
        android:id="@+id/nav_database"
        android:name="jimmynunez.com.ui.database.DatabaseFragment"
        android:label="@string/menu_database"
        tools:layout="@layout/fragment_database" />
</navigation>